--- a/tracker/index.html
+++ b/tracker/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expenses Tracker</title>
     <link rel="stylesheet" href="./style/style.css">
-    <script>
+    <script type="text/javascript">
         
 const whole_income = document.getElementById("whole_income")
 const amount_output = document.getElementById("amount_output")
