--- a/tracker/index.html
+++ b/tracker/index.html
@@ -22,7 +22,10 @@
 .container{
     margin: 10px auto;
     width: 450px;
-    box-shadow: 0 1px 5px rgba(250 250 0.2), 0 1px 5px rgba(255 255 255 0.3);
+    box-shadow: 0 1px 5px rgba(250 250 0.2), 0 1px 5px rgba(255 
+                        255 255 0.3);
+    min-height: 100vh;
+    align-items: center;
 }
 #whole_income{
     color: rgba(165, 42, 42, 0.77);
